test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-owned.chpl
//  lhs: unmanaged!  rhs: owned?  errors: nlb, mm

class MyClass {
  var x: int;
}

var rhs: owned MyClass?;

var lhs: unmanaged MyClass = rhs;

compilerError("done");
