test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-owned.good
init-var-nonnil-unmanaged-from-oknil-owned.chpl:9: error: cannot assign to non-nilable unmanaged MyClass from nilable owned MyClass?
